--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>She is Charisseee!</h1>
     <hr>
     <img src="charisse!.jpg" height="500" title="Cutie Charisse!" >
-
+     <audio autoplay src="The Ridleys - Aphrodite (Lyric Video).mp4"></audio>
 </body>
 </html>
